plugins {
    id 'com.android.application'
}

android {
    compileSdk 34
    dexOptions {
        javaMaxHeapSize "4g"
    }
	
    lintOptions {
        abortOnError false
    }
	
    signingConfigs {
        release {
            // QCL is its own product: dedicated key, so it can be installed next to HMCL-PE
            // instead of replacing it.
            storeFile file("../qcl.keystore")
            storePassword "qcl123456"
            keyAlias "qcl"
            keyPassword "qcl123456"
        }
    }
    
    packagingOptions {
        jniLibs {
            useLegacyPackaging = true
        }
    }
     
    defaultConfig {
        applicationId "com.qcl.launcher"
        minSdk 26
        targetSdk 34
        // Own version line for QCL; kept above 208 so any earlier test build is an upgrade, never a downgrade.
        versionCode 307
        versionName "1.0.6"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            signingConfig signingConfigs.release
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    packagingOptions {
        pickFirst 'META-INF/LICENSE.md' // picks the JavaMail license file
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/license.txt'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/NOTICE.md'
        exclude 'META-INF/notice.txt'
        exclude 'META-INF/ASL2.0'
        exclude("META-INF/*.kotlin_module")
    }

}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation project(path: ':FilePicker')
    implementation project(path: ':Terracotta')
    implementation project(path: ':ZipTools')
    implementation project(path: ':Boat')
    implementation project(path: ':PojavLauncher')
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.github.naman14:app-theme-engine:0.5.2@aar'
    implementation 'com.google.android.material:material:1.11.0'
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
    implementation 'org.nanohttpd:nanohttpd:2.3.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'cat.ereza:customactivityoncrash:2.3.0'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.moandjiezana.toml:toml4j:0.7.2'
    implementation 'org.apache.commons:commons-compress:1.21'
    implementation 'com.github.steveice10:opennbt:1.5'
    implementation 'com.jaredrummler:colorpicker:1.1.0'
    implementation 'com.jaredrummler:android-device-names:2.1.0'
    implementation 'org.jsoup:jsoup:1.14.3'
    implementation 'org.apache.commons:commons-lang3:3.13.0'
    implementation 'org.jenkins-ci:constant-pool-scanner:1.2'
    implementation 'com.github.gzu-liyujiang:Android_CN_OAID:4.2.4'
    implementation 'com.github.nedimf:maildroid:v0.1.0-release'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
}
